syntax = "proto3";
package dist_tracing;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {}

message HelloResponse {
  string msg = 1;
}
